tests/negative/test_fixed_cast_impl_from.orb
fixed t i32;

fnc main () () {
    sym a:t;
    sym (b:i32 a);
};